user fetching for admin updated